--- a/index.html
+++ b/index.html
@@ -72,12 +72,7 @@
             </div>
         </div>
         
-        <div class="logo">
-
-            <picture>
-                <source media="(min-width: 992px)" srcset="./imagens/logo1-g.png">
-                <img src="./imagens/logo1.png" alt="Logo">
-            </picture>
+        <div class="logo"> <!-- Logo adicionada com CSS -->
 
         </div>
 
