criação da sessão de cadastro

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
 
             <div class="registrasse">
-                <a href="#">Não possui uma conta? Registre-se</a>
+                <a href="cadastro.html">Não possui uma conta? Registre-se</a>
             </div>
 
             <div class="conteudo continue_google">
